@@ -39,7 +39,7 @@ import java.io.InputStreamReader;
 import java.lang.invoke.MethodHandles;
 import java.net.ServerSocket;
 import java.net.Socket;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.ArrayList;
@@ -257,7 +257,7 @@ public class AuditLoggerIntegrationTest extends SolrCloudAuthTestCase {
     expectThrows(
         FileNotFoundException.class,
         () -> {
-          try (InputStream is = new URL(baseUrl + "/node/foo").openStream()) {
+          try (InputStream is = URI.create(baseUrl + "/node/foo").toURL().openStream()) {
             new String(is.readAllBytes(), StandardCharsets.UTF_8);
           }
         });
